--- a/course-list.html
+++ b/course-list.html
@@ -4,8 +4,27 @@
 {% assign semester = site.data.courses.jan2017 %}
 <h3 class="text-center">Courses for the semester January-April 2017</h3>
 
+<div class="col-md-8 col-offset-md-1">
+
 <h4> Core for Integrated Ph.D. first year: </h4>
 
 {% assign list = semester.core1 %}
 
 {% include course-table.html %}
+<p>&nbsp;</p>
+
+{% if semester.core2 %}
+<h4> Core for Integrated Ph.D. second year: </h4>
+
+{% assign list = semester.core2 %}
+
+{% include course-table.html %}
+<p>&nbsp;</p>
+{% endif %}
+
+<h4> Elective Courses </h4>
+
+{% assign list = semester.electives %}
+
+{% include course-table.html %}
+ </div>
