courses with titles

--- a/_all-courses/ma213.html
+++ b/_all-courses/ma213.html
@@ -1,5 +1,6 @@
 ---
 title: Algebra II
+code: MA 213
 ---
 <div style="width: 650; height: 279; border: 1px solid #FFFFFF; padding-left: 4; padding-right: 4; padding-top: 1; padding-bottom: 1">
   <font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b><font color="#cc6600">ALGEBRA
