--- a/_all-courses/ma222.html
+++ b/_all-courses/ma222.html
@@ -1,5 +1,6 @@
 ---
 title: 'ANALYSIS II: MEASURE AND INTEGRATION'
+code: MA 222
 ---
 <p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b><font color="#CC6600">ANALYSIS II: MEASURE AND INTEGRATION  </font> </b></font></p>
 
