--- a/_all-courses/ma229.html
+++ b/_all-courses/ma229.html
@@ -1,5 +1,6 @@
 ---
 title: Calculus on Manifolds
+code: MA 229
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">
