--- a/_all-courses/ma241.html
+++ b/_all-courses/ma241.html
@@ -1,5 +1,6 @@
 ---
 title: Ordinary Differential Equations
+code: MA 241
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">
