--- a/_all-courses/ma313.html
+++ b/_all-courses/ma313.html
@@ -1,5 +1,6 @@
 ---
 title: Algebraic Number Theory
+code: MA 313
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">
