--- a/_all-courses/ma383.html
+++ b/_all-courses/ma383.html
@@ -1,5 +1,6 @@
 ---
 title: Introduction to Minimal Surfaces
+code: MA 383
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">INTRODUCTION TO MINIMAL SURFACES</font></b></p>
