--- a/_all-courses/ma224.html
+++ b/_all-courses/ma224.html
@@ -1,5 +1,6 @@
 ---
 title: Complex Analysis
+code: MA 224
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">
