--- a/_all-courses/ma327.html
+++ b/_all-courses/ma327.html
@@ -1,5 +1,6 @@
 ---
 title: Topics in Analysis
+code: MA 327
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">
