--- a/_all-courses/ma332.html
+++ b/_all-courses/ma332.html
@@ -1,5 +1,6 @@
 ---
 title: Algebraic Topology
+code: MA 332
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">
