--- a/_all-courses/ma371.html
+++ b/_all-courses/ma371.html
@@ -1,5 +1,6 @@
 ---
 title: Control and Homogenization
+code: MA 371
 ---
 <p>&nbsp;</p>
 <div style="width: 662; height: 418; border: 1px solid #FFFFFF; padding-left: 4; padding-right: 4; padding-top: 1; padding-bottom: 1">
