--- a/_all-courses/ma390.html
+++ b/_all-courses/ma390.html
@@ -1,5 +1,6 @@
 ---
 title: Percolation and Random Graphs
+code: MA 390
 ---
 <p><b>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#CC6600">
