--- a/jrf.html
+++ b/jrf.html
@@ -19,7 +19,7 @@
               <p><u>Listed alphabetically by Last Name.</u></p>
              
                    <!-- <br>
-                        <table width="525" border="0" cellspacing="0" cellpadding="1">
+                        <table class="table">
 		        <tr valign="top">
 		        <td width="120">Name</td>
 			<td width="5">:</td>
@@ -40,7 +40,7 @@
 			</tr>
 			</table>		
 			<br>
- <table width="525" border="0" cellspacing="0" cellpadding="1">
+ <table class="table">
 			<tr valign="top">
 			<td width="120">Name</td>
 			<td width="5">:</td>
@@ -61,7 +61,7 @@
 			</tr>	
 			</table>-->
 		<!--	<br>
-          <table width="525" border="0" cellspacing="0" cellpadding="1">
+          <table class="table">
 		  <tr valign="top">	
 		  <td width="120">Name</td>                                           
 		  <td width="5">:</td>                                                          
@@ -85,7 +85,7 @@
 				  <br>
 
 		 <!-- 
-            	 <table width="525" border="0" cellspacing="0" cellpadding="1">
+            	 <table class="table">
 				 <tr valign="top">
 				 <td width="120">Name</td>                                           
 				 <td width="5">:</td>                                                          
@@ -110,7 +110,7 @@
 
 			
 			
-                       <table width="525" border="0" cellspacing="0" cellpadding="1">
+                       <table class="table">
 			<tr valign="top">
 			<td width="120">Name</td>                                           
 			<td width="5">:</td>                                                          
@@ -135,7 +135,7 @@
 				<!-- <br>
 
 
-                       <table width="525" border="0" cellspacing="0" cellpadding="1">
+                       <table class="table">
 			<tr valign="top">
 			<td width="120">Name</td>                                           
 			<td width="5">:</td>                                                          
@@ -160,7 +160,7 @@
 
 			
                         <!-- <br>
-                        <table width="525" border="0" cellspacing="0" cellpadding="1">
+                        <table class="table">
 		        <tr valign="top">
 		        <td width="120">Name</td>
 			<td width="5">:</td>
@@ -184,7 +184,7 @@
 
  
                         <!-- <br>
-                        <table width="525" border="0" cellspacing="0" cellpadding="1">
+                        <table class="table">
 		        <tr valign="top">
 		        <td width="120">Name</td>
 			<td width="5">:</td>
