--- a/people-stu-intdisphd.html
+++ b/people-stu-intdisphd.html
@@ -20,7 +20,7 @@
               <p><u>Listed alphabetically by Last Name.</u></p>
            
 <!--
-			 <table width="525" border="0" cellspacing="0" cellpadding="1">
+			 <table class="table">
 			 <tr valign="top">
 			 <td width="120">Name</td>
 			 <td width="5">:</td>
@@ -43,7 +43,7 @@
     -->               <!--
                         <br>
  
-			<table width="525" border="0" cellspacing="0" cellpadding="1">
+			<table class="table">
 			 <tr valign="top">
 			 <td width="120">Name</td>
 			 <td width="5">:</td>
@@ -66,7 +66,7 @@
 
                          <br> 
 
-			 <table width="525" border="0" cellspacing="0" cellpadding="1">
+			 <table class="table">
 			 <tr valign="top">
 			 <td width="120">Name</td>
 			 <td width="5">:</td>
