--- a/people-trainee.html
+++ b/people-trainee.html
@@ -16,7 +16,7 @@
                 </tr>
               </table>
               <p><u>Listed alphabetically by Last Name.</u></p>
-              <table width="525" border="0" cellspacing="0" cellpadding="1">
+              <table class="table">
                 <tr valign="top"> 
                   <td width="120">Name</td>
                   <td width="5">:</td>
@@ -41,7 +41,7 @@
 			  <area shape="rect" coords="0,0,112,19" alt="Project Associate" title="Project Associate">
 			  </map>
             <!-- 
-			   <table width="525" border="0" cellspacing="0" cellpadding="1">
+			   <table class="table">
 			   <tr valign="top">
 			   <td width="120">Name</td>
 			   <td width="5">:</td>
@@ -63,7 +63,7 @@
                         
    <br>-->
 
-			  <table width="525" border="0" cellspacing="0" cellpadding="1">
+			  <table class="table">
 			  <tr valign="top"><td width="120">Name</td>
 		      <td width="5">:</td>
 			  <td width="300">S. Shanmugavel</td>
@@ -80,7 +80,7 @@
 			  <tr valign="top">
 			  <td background="images/div-horz.gif" colspan="7">&nbsp;</td>
 			  </tr></table>
-                        <table width="525" border="0" cellspacing="0" cellpadding="1">
+                        <table class="table">
 			   <tr valign="top">
 			   <td width="120">Name</td>
 			   <td width="5">:</td>
