--- a/courses2016JA.html
+++ b/courses2016JA.html
@@ -14,7 +14,7 @@
 
   <p><font color="#CC6600"><b>January</b></font><b><font color="#cc6600"> - April 2016</font></b><br>
 </p>
-		   <table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1"  height="208">
+		   <table class="table">
              <tbody>
                <tr bgcolor="#f0f0f0" valign="top">
                  <td colspan="4" height="20"><b>Core courses for the Integrated Ph.D. programme in I<sup>st</sup> Year</b></td>
