--- a/courses2013AD.html
+++ b/courses2013AD.html
@@ -13,7 +13,7 @@
 		<!--	<p><font color="#CC6600"><b>Jan</b></font><b><font color="#cc6600">
             - July 2010</font></b><br>
             </p>
-           <table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1"  height="208">
+           <table class="table">
               <tbody>
                 <tr bgcolor="#f0f0f0" valign="top">
                   <td colspan="4" height="20"><b>Core courses for Integrated Ph.D. in
@@ -300,7 +300,7 @@ Algebra</a> </td>
 				 </tr>
               </tbody>
              &nbsp;</table>
-            &nbsp;<table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1" >
+            &nbsp;<table class="table">
               <tbody>
                 <tr>
                   <td colspan="4" bgcolor="#F0F0F0"><b>Core courses for Integrated Ph.D.
@@ -531,7 +531,7 @@ Algebra</a> </td>
 				 </tr>
               </tbody>
              &nbsp;</table>
-            &nbsp;<table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1" >
+            &nbsp;<table class="table">
               <tbody>
                 <tr>
                   <td colspan="4" bgcolor="#F0F0F0"><b>Core courses for Integrated Ph.D.
@@ -611,7 +611,7 @@ in Mathematical Sciences (2004)Third Semester</b></td>
                 </tr>
               </tbody>
             </table> -->
-           <!-- &nbsp;<table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1" >
+           <!-- &nbsp;<table class="table">
               <tbody>
                 <tr bgcolor="#f0f0f0" valign="top">
                   <td colspan="4"><b>Core courses for Integrated Ph.D.
