courses link correction

--- a/courses2015JA.html
+++ b/courses2015JA.html
@@ -1,15 +1,5 @@
 ---
 ---
-<center>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            </td>
-
-            <td valign="top" >
 
 
   <p><font color="#CC6600"><b>January</b></font><b><font color="#cc6600"> - April 2015</font></b><br>
@@ -53,7 +43,7 @@
              </tbody>
            </table>
 		   <br>
-           <table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1"  height="161">
+           <table class="table">
              <tbody>
                <tr bgcolor="#f0f0f0" valign="top">
                  <td colspan="4" height="20"><b>Elective Courses: </b></td>
