--- a/course-list.html
+++ b/course-list.html
@@ -15,12 +15,12 @@
 
 <h3>Earlier Semesters</h3>
 <ul>
-  <li> <a href="/courses2015AD.html"> August-December 2015</a></li>
-  <li> <a href="/courses2015JA.html">January-April 2015</a></li>
-  <li> <a href="/courses2014AD.html"> August-December 2014</a></li>
-  <li> <a href="/courses2014JA.html"> January-April 2014</a></li>
-  <li> <a href="/courses2013AD.html"> August-December 2013</a></li>
-  <li> <a href="/coursesold.html"> Earlier courses</a></li>
+  <li> <a href="courses2015AD.html"> August-December 2015</a></li>
+  <li> <a href="courses2015JA.html">January-April 2015</a></li>
+  <li> <a href="courses2014AD.html"> August-December 2014</a></li>
+  <li> <a href="courses2014JA.html"> January-April 2014</a></li>
+  <li> <a href="courses2013AD.html"> August-December 2013</a></li>
+  <li> <a href="coursesold.html"> Earlier courses</a></li>
   </li>
  </ul>
  </div>
