--- a/courses2016JA.html
+++ b/courses2016JA.html
@@ -55,7 +55,7 @@
              </tbody>
            </table>
 		   <br>
-           <table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1"  height="161">
+           <table class="table">
              <tbody>
                <tr bgcolor="#f0f0f0" valign="top">
                  <td colspan="4" height="20"><b>Elective Courses </b></td>
