--- a/newcourse.html
+++ b/newcourse.html
@@ -61,7 +61,7 @@
 		   </table> 
  <br>
 
-<table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1"  height="161">
+<table class="table">
               <tbody>
                 <tr bgcolor="#f0f0f0" valign="top">
                   <td colspan="4" height="39"><b>Elective Courses: </b></td>
@@ -352,7 +352,7 @@ in Mathematical Sciences
              </tbody>
            </table>
 		   <br>
-           <table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1"  height="161">
+           <table class="table">
              <tbody>
                <tr bgcolor="#f0f0f0" valign="top">
                  <td colspan="4" height="20"><b>Elective Courses </b></td>
