--- a/seminars-all.html
+++ b/seminars-all.html
@@ -12,6 +12,8 @@ title: Seminars
   <h5><strong> Title: </strong> <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a> </h5>
  <h5>  <strong>Speaker: </strong> {{sem.speaker}} </h5>
   <h5>  <strong>Date: </strong>{{ sem.date | date_to_long_string }} </h5>
+  <h5>  <strong>Time: </strong>{{ sem.time }} </h5>
+  <h5>  <strong>Venue: </strong>{{ sem.location }} </h5>
 
 
     {{ sem.content }}
@@ -21,3 +23,21 @@ title: Seminars
 
   <p>&nbsp;</p>
  {% endfor %}
+
+
+<div class="row">
+  <h3>Previous years</h3>
+  <ul>
+    <li><a href="seminars2016.html">2016</a></li>
+    <li><a href="seminars2012.html">2012</a></li>
+    <li><a href="seminars2011.html">2011</a></li>
+    <li><a href="seminars2010.html">2010</a></li>
+    <li><a href="seminars2009.html">2009</a></li>
+    <li><a href="seminars2008.html">2008</a></li>
+    <li><a href="seminars2007.html">2007</a></li>
+    <li><a href="seminars2006.html">2006</a></li>
+    <li><a href="seminars2005.html">2005</a></li>
+    <li><a href="seminars2004.html">2004</a></li>
+  </ul>
+
+</div>
