migrated and linked forms, contact etc, crude landing page

--- a/conus.html
+++ b/conus.html
@@ -1,68 +1,21 @@
 ---
 ---
-<center>
-                  </td>
-                </tr>
-              </table>
-              <p>&nbsp;</p>
-              <p>&nbsp;</p>
-            </td>
-            <td valign="top" > 
-              <p>Please contact us through any of the following means.<br>
+
+              <p>Please contact us through any of the following means.
               </p>
-              <table width="400" border="0" cellspacing="0" cellpadding="1">
-                <tr bgcolor="#CCCCCC" valign="top"> 
-                  <td> 
-                    <table width="400" border="0" cellspacing="0" cellpadding="5">
-                      <tr bgcolor="#F0F0F0" valign="top"> 
-                        <td>Mailing Address</td>
-                        <td>:</td>
-                        <td> Department of Mathematics<br>
-                          Indian Institute of Science<br>
-                          Bangalore - 560012, INDIA</td>
-                      </tr>
-                      <tr bgcolor="#F0F0F0" valign="top"> 
-                        <td>Telephone</td>
-                        <td>:</td>
-                        <td>+91-80-2293 2711, 2293 2265</td>
-                      </tr>
-                      <tr bgcolor="#F0F0F0" valign="top"> 
-                        <td>Fax</td>
-                        <td>:</td>
-                        <td>+91-80-2360 0146</td>
-                      </tr>
-                      <tr bgcolor="#F0F0F0" valign="top"> 
-                        <td>Email</td>
-                        <td>:</td>
-                        <td><a href="mailto:rnaren@math.iisc.ernet.in?subject=Message%20from%20department%20web%20site.">rnaren@math.iisc.ernet.in</a></td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-              <pre>&nbsp;</pre>
-              <pre><font size="2" face="Verdana"><a href="office_phone.pdf"><span style="color: rgb(0, 0, 144); font-weight: 700;">Here is a complete list of phone numbers</span></a></font></pre>
-              <br>
-              <p>&nbsp;</p>
-            </td>
-          </tr>
-        </table>
-        <table width="778" border="0" cellspacing="0" cellpadding="4" align="center">
-          <tr bgcolor="#FFFFFF" align="center"> 
-            <td colspan="3"> 
-              <hr>
-            </td>
-          </tr>
-          <tr bgcolor="#FFFFFF" align="center" valign="top"> 
-            <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
-              Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@math.iisc.ernet.in">Contact 
-              the Administrator</a></td>
-            <td><a href="disclaimer.html">Disclaimer</a></td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  
-</center>
+              <address>
+<strong>Mailing Address:</strong><br>
+ Department of Mathematics <br>
+  Indian Institute of Science <br>
+  Bangalore - 560012, INDIA <br> <br>
+
+<strong>Telephone:</strong> +91-80-2293 2711, 2293 2265 <br> <br>
+
+<strong>Fax:</strong> +91-80-2360 0146 <br> <br>
+
+<strong>Email:</strong>
+<a href="mailto:rnaren@math.iisc.ernet.in?subject=Message%20from%20department%20web%20site.">rnaren@math.iisc.ernet.in</a>
+</address>
+
+  <a href="mailto:surender@math.iisc.ernet.in">Contact
+              the Administrator</a>
