--- a/index.html
+++ b/index.html
@@ -2,31 +2,30 @@
 ---
 
 <div class="row">
-  <div class="col-md-8">
-    <h3>Introduction</h3>
-    <p>The department of Mathematics was established in 1956 and over the
-                years has evolved into a Department with a healthy balance between
-                pure and applied mathematics. The Department has a vibrant research
-                atmosphere backed up by excellent infrastructural facilities.
-                We have a modern computer laboratory and a good Departmental library.
-                <a href="faculty.html">Members of our faculty</a> have won many
-                honours in recognition of their academic achievements. </p>
-
-              <p>The Department admits students under two programmes - the <a href="degprog-phd.html">Ph.D.
-                programme</a> and the <a href="degprog-intphd.html">integrated
-                Ph.D. programme</a>. Further information can be found by following
-                the links on the home page. In the current economic scenario,
-                employment opportunities for Ph.D.'s in mathematics are excellent
-                - both in academics and in industry. </p>
-
-              <p>The Department has pioneered interdisciplinary programmes like
-                the <a href="http://math.iisc.ernet.in/~imi" target="_blank">IISc
-                Mathematics Initiative</a>. It takes active part in the Indo-French <a href="http://disc.iisc.ernet.in/ficus/ficus.html" target="_blank">Cyber
-                University project</a> with Toulouse University Network. The Department
-                is also deeply involved in the Kishore Vaigyanik Protsahan Yojana
-                and the Mathematical
-                Olympiad programme.</p>
+  <div class="col-md-4">
+    <h3>Research</h3>
+    The department is active in research in most areas of pure and applied mathematics, including Algebra,
+    Number Theory, Geometry/Topology, Probability,
+    Differential Equations, Mathematical Finance and Time Series Analysis.
+      <ul>
+        <li><a href="research-areas.html">Research Areas</a></li>
+        <li><a href="faculty">Faculty</a></li>
+        <li><a href="pubs">Research Publications</a></li>
+      </ul>
   </div>
+  <div class="col-md-4">
+    <h3>Degrees and Courses</h3>
+    The department has a Ph.D. programme as well as an integrated Ph.D. programme. Undergraduate students at
+    IISc can also take mathematics as a major or minor.
+      <ul>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="degprog-phd"></a>Ph.D. programme</li> for students with Masters degrees
+        <li><a href="degprog-intphd">Integrated Ph.D. programme</a></li> for students with Bachelor degrees
+        <li><a href="www.iisc.ernet.in/ug">Undergraduate programme</a></li>
+      </ul>
+  </div>
+
+
 
   <div class="col-md-offset-1 col-md-3">
     <h3> <a href="seminars-all.html">Seminars</a></h3>
