--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 ---
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-8">
+    Welcome to the Department of Mathematics, Indian Institute of Science. We do this, that and the other.
+  <div class="col-md-6">
     <h3>Research</h3>
     The department is active in research in most areas of pure and applied mathematics, including Algebra,
     Number Theory, Geometry/Topology, Probability,
@@ -13,7 +15,7 @@
         <li><a href="pubs">Research Publications</a></li>
       </ul>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6">
     <h3>Degrees and Courses</h3>
     The department has a Ph.D. programme as well as an integrated Ph.D. programme. Undergraduate students at
     IISc can also take mathematics as a major or minor.
@@ -25,7 +27,7 @@
       </ul>
   </div>
 
-
+</div>
 
   <div class="col-md-offset-1 col-md-3">
     <h3> <a href="seminars-all.html">Seminars</a></h3>
