--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-8">
-    Welcome to the Department of Mathematics, Indian Institute of Science. We do this, that and the other.
+    <img src="home-bldg4.jpg" alt="" width="100%">
   <div class="col-md-6">
     <h3>Research</h3>
     The department is active in research in most areas of pure and applied mathematics, including Algebra,
