various data, style updates

--- a/course-list.html
+++ b/course-list.html
@@ -1,13 +1,8 @@
 ---
+title: Courses
 ---
 
-{% assign semester = site.data.courses.jan2017 %}
-<div class="col-md-8 col-offset-md-1">
-<h3 class="text-center">Courses for the semester January-April 2017</h3>
-
-{% include semester-courses.html %}
-
-{% assign semester = site.data.courses.aug2016 %}
+{% assign semester = site.data.courses.aug2017 %}
 <h3 class="text-center">Courses for the semester August-December 2017</h3>
 
 {% include semester-courses.html %}
@@ -15,6 +10,7 @@
 
 <h3>Earlier Semesters</h3>
 <ul>
+  <li><a href="courses2016-17.html"> Academic Year 2016-17</a></li>
   <li> <a href="courses2015AD.html"> August-December 2015</a></li>
   <li> <a href="courses2015JA.html">January-April 2015</a></li>
   <li> <a href="courses2014AD.html"> August-December 2014</a></li>
