--- a/emsci.html
+++ b/emsci.html
@@ -1,7 +1,7 @@
 ---
 title: Emeritus Scientists
 ---
-<div class="col-md-10 col-md-offset-1">
+<div class="col-md-12">
 <h2 class="text-center">Emeritus Scientists</h2>
 
 <table class="table table-striped">
