--- a/faculty.html
+++ b/faculty.html
@@ -2,7 +2,7 @@
 title: Faculty members
 ---
 
-<div class="col-md-10 col-md-offset-1">
+<div class="col-md-12">
 <h2>Faculty members</h2>
 
 <h4>Alphabetically by last name</h4>
