--- a/nmi-dist.html
+++ b/nmi-dist.html
@@ -1,7 +1,7 @@
 ---
 title: NMI Distinguished Associates
 ---
-<div class="col-md-10 col-md-offset-1">
+<div class="col-md-12">
 <h2 class="text-center">NMI Distinguished Associates</h2>
 
 <table class="table table-striped">
