--- a/students-intphd.html
+++ b/students-intphd.html
@@ -1,7 +1,7 @@
 ---
 title: Integrated PhD students
 ---
-<div class="col-md-10 col-md-offset-1">
+<div class="col-md-12">
 <h2 class="text-center">Integrated PhD students</h2>
 
 <h4 class="text-center">By year of joining</h4>
