--- a/inspire.html
+++ b/inspire.html
@@ -1,7 +1,7 @@
 ---
 title: INSPIRE fellows and DST scientists
 ---
-<div class="col-md-10 col-md-offset-1">
+<div class="col-md-12">
 <h2 class="text-center">INSPIRE fellows and DST scientists</h2>
 
 <table class="table table-striped">
