--- a/trainees.html
+++ b/trainees.html
@@ -1,7 +1,7 @@
 ---
 title: Project staff
 ---
-<div class="col-md-10 col-md-offset-1">
+<div class="col-md-12">
 <h2 class="text-center">Project Staff</h2>
 
 <table class="table table-striped">
