script for deployment, updates

--- a/_root-site/index.html
+++ b/_root-site/index.html
@@ -214,18 +214,18 @@ MathJax.Hub.Config({
 </li>
  
 <li>
- <div><strong> Title: </strong> <a href="/seminars/roncal.html">Weighted norm inequalities for rough singular integral operators</a> </div>
-<div>  <strong>Speaker: </strong> Luz Roncal (BCAM -  Basque Center for Applied Mathematics) </div>
-<div>  <strong>Date: </strong>24 April 2017 </div>
+ <div><strong> Title: </strong> <a href="/seminars/apoorva.html">From I.Schur to T.Tao: the history of matrix positivity preservers</a> </div>
+<div>  <strong>Speaker: </strong> Apoorva Khare (IISc Mathematics) </div>
+<div>  <strong>Date: </strong>18 August 2017 </div>
 <div class="">
 &nbsp;
 </div>
 </li>
  
 <li>
- <div><strong> Title: </strong> <a href="/seminars/swarnava.html">Conformal blocks, strange duality and the moduli space of curves.</a> </div>
-<div>  <strong>Speaker: </strong> Swarnava Mukhopadhyay (University of Maryland) </div>
-<div>  <strong>Date: </strong>21 April 2017 </div>
+ <div><strong> Title: </strong> <a href="/seminars/malabika.html">For good measure ... and bad</a> </div>
+<div>  <strong>Speaker: </strong> Malabika Pramanik( UBC, Canada) </div>
+<div>  <strong>Date: </strong>02 August 2017 </div>
 <div class="">
 &nbsp;
 </div>
