--- a/_root-site/postdocs.html
+++ b/_root-site/postdocs.html
@@ -175,15 +175,15 @@ MathJax.Hub.Config({
 <table class="table table-striped">
   
   <tr>
-    <td class="col-md-7"><div><h4>Chandan Pal, Ph. D. (IITB)</h4> </div>
+    <td class="col-md-7"><div><h4>Asha Kisan Dond(IITB)</h4> </div>
         <div>
-          <strong>E-mail:</strong> <a href="mailto:chandan14@math.iisc.ernet.in">chandan14@math.iisc.ernet.in</a>
+          <strong>E-mail:</strong> <a href="mailto:asha16@math.iisc.ernet.in">asha16@math.iisc.ernet.in</a>
         </div>
         
       </div>
     </td>
     <td>
-      <img class="col-md-3 pull-right img-responsive" src="/images/stu-chandan14.jpg"></td>
+      <img class="col-md-3 pull-right img-responsive" src="/images/stu-asha16.jpg"></td>
   </tr>
   
   <tr>
@@ -232,6 +232,18 @@ MathJax.Hub.Config({
     </td>
     <td>
       <img class="col-md-3 pull-right img-responsive" src="/images/stu-sathish16.jpg"></td>
+  </tr>
+  
+  <tr>
+    <td class="col-md-7"><div><h4>Tanmay Sarkar, Ph. D. (IIT Madras)</h4> </div>
+        <div>
+          <strong>E-mail:</strong> <a href="mailto:tanmay17@math.iisc.ernet.in">tanmay17@math.iisc.ernet.in</a>
+        </div>
+        
+      </div>
+    </td>
+    <td>
+      <img class="col-md-3 pull-right img-responsive" src="/images/stu-tanmay17.jpg"></td>
   </tr>
   
 </table>
