--- a/_root-site/seminars/rishi-vyas.html
+++ b/_root-site/seminars/rishi-vyas.html
@@ -10,7 +10,7 @@
 
   
 
-  <title> Department of Mathematics, IISc</title>
+  <title>  Dualizing Complexes in the Noncommutative Arithmetic Contex - Maths@IISc </title>
   <link rel="icon" href="/IIScLogo.jpg">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -169,112 +169,38 @@ MathJax.Hub.Config({
 
 
 
-    
+<div class="row">
 
+  <div class="col-md-10">
+ <h5><strong> Title: </strong> Dualizing Complexes in the Noncommutative Arithmetic Contex </h5>
+<h5>  <strong>Speaker: </strong> Rishi Vyas (Ben Gurion University, Israel) </h5>
+<h5>  <strong>Date: </strong>06 June 2017 </h5>
+<h5><strong>Time:</strong> 3pm</h5>
+<h5><strong>Venue:</strong> LH-I </h5>
+    <p>Dualizing complexes were first introduced in commutative
+algebra and algebraic geometry by Grothendieck and play a fundamental role
+in Serre-Grothendieck duality theory for schemes. The notion of a
+dualizing complex was extended to noncommutative ring theory by Yekutieli.
+There are existence theorems for dualizing complexes in the noncommutative
+context, due to Van den Bergh, Wu, Zhang, and Yekutieli amongst others.</p>
 
- <a href="/seminars/jkverma">Counting complex solutions of polynomial equations via Newton polytopes</a> Prof. Jugal Verma, IIT, Bombay
- <p>05 September 2017</p>
- <p><p>We shall discuss a theorem of Bernstein published in
-1975about the number of common solutions of n complex polynomials in n
-variables in terms of the mixed volumes of their Newton polytopes.
-This is a far reaching generalisation of the Fundamental Theorem of
-Algebra and Bezout’s Theorem about intersections of plane algebraic
-curves. If time permits, we shall sketch a proof of Bernstein’s theorem
-using Hilbert functions of monomial ideals in polynomial rings.</p>
-</p>
- 
- <a href="/seminars/apoorva">From I.Schur to T.Tao: the history of matrix positivity preservers</a> Apoorva Khare (IISc Mathematics)
- <p>18 August 2017</p>
- <p><p>I will give a gentle historical (and ongoing) account of matrix positivity
-and of operations that preserve it. This is a classical question studied
-for much of the past century, including by Schur, Polya-Szego, Schoenberg,
-Kahane, Loewner, and Rudin. It continues to be pursued actively, for both
-theoretical reasons as well as applications to high-dimensional covariance
-estimation. I will end with some recent joint work with Terence Tao
-(UCLA).</p>
+<p>Most considerations of dualizing complexes over noncommutative rings are
+for algebras defined over fields. There are technical difficulties
+involved in extending this theory to algebras defined over more general
+commutative base rings. In this talk, we will describe these challenges
+and how to get around them. Time permitting, we will end by presenting an
+existence theorem for dualizing complexes in this more general setting.</p>
 
-<p>The entire talk should be accessible given a basic understanding of linear
-algebra/matrices and one-variable calculus. That said, I will occasionally
-insert technical details for the more advanced audience. For example: this
-journey connects many seemingly distant mathematical topics, from Schur
-(products and complements), to spheres and Gram matrices, to Toeplitz and
-Hankel matrices, to rank one updates and Rayleigh quotients, to
-Cauchy-Binet and Jacobi-Trudi identities, back full circle to Schur
-(polynomials).</p>
-</p>
- 
- <a href="/seminars/malabika">For good measure ... and bad</a> Malabika Pramanik( UBC, Canada)
- <p>02 August 2017</p>
- <p>
-</p>
- 
- <a href="/seminars/vikram">The Pick--Nevanlinna interpolation problem: complex-analytic methods in special domains</a> Vikamjit Singh Chandel
- <p>17 July 2017</p>
- <p><p>The Pick–Nevanlinna interpolation problem in its fullest generality is as
-follows:</p>
+<p>The material described in this talk is work in progress, carried out
+jointly with Amnon Yekutieli.</p>
 
-<p>Given domains D_1, D_2 in complex Euclidean spaces, and a set {(z_i,w_i):
-1\leq i\leq N}\subset D_1\times D_2, where z_i are distinct and N is a
-positive integer \geq 2, find necessary and sufficient conditions for the
-existence of a holomorphic map F from D_1 into D_2 such that F(z_i) = w_i,
-1\leq N.</p>
+  </div>
 
-<p>When such a map F exists, we say that F is an interpolant of the data. Of
-course, this problem is intractable at the above level of generality.
-However, two special cases of the problem – which we shall study in this
-thesis – have been of lasting interest:</p>
+</div>
 
-<p>INTERPOLATION FROM THE POLYDISC TO THE UNIT DISC: This is the case D_1 =
-D^n and D_2 = D, where D denotes the open unit disc in the complex plane
-and n is a positive integer. The problem itself originates with Georg
-Pick’s well-known theorem (independently discovered by Nevanlinna) for the
-case n=1. Much later, Sarason gave another proof of Pick’s result using an
-operator-theoretic approach, which is very influential. Using this
-approach for n\geq 2, Agler–McCarthy provided a solution to the problem
-with the restriction that the interpolant is in the Schur–Agler class.
-This is notable because when n = 2 the latter result completely solves the
-problem for the case D_1 = D^2, D_2 = D. However, Pick’s approach can also
-be effective for n\geq 2. In this thesis, we give an alternative
-characterization for the existence of a 3-point interpolant based on
-Pick’s approach and involving the study of rational inner functions.</p>
-
-<p>Cole, Lewis and Wermer lifted Sarason’s approach to uniform algebras –
-leading to a characterization for the existence of an interpolant in terms
-of the positivity of a large, rather abstractly-defined family of (N\times
-N) matrices. McCullough later refined their result by identifying a
-smaller family of matrices. The second result of this thesis is in the
-same vein, namely: it provides a characterization of those data that admit
-a D^n-to-D interpolant in terms of the positivity of a family of matrices
-parametrized by a class of polynomials.</p>
-
-<p>INTERPOLATION FORM THE UNIT DISC TO THE SPECTRAL UNIT BALL: This is the
-case D_1 = D and D_2 is the set of all (n\times n) matrices with spectral
-radius less than 1. The interest in this arises from problems in Control
-Theory. Bercovici, Fois and Tannenbaum adapted Sarason’s methods to give a
-(somewhat hard-to-check) characterization for the existence of an
-interpolant under a very mild restriction. Later, Agler–Young established
-a relation between the interpolation problem in the spectral unit ball and
-that in the symmetrized polydisc – leading to a necessary condition for
-the existence of an interpolant. Bharali later provided a new inequivalent
-necessary condition for the existence of an interpolant for any n and N=2.
-We shall present a necessary condition for the existence of a 3-point
-interpolant. This we shall achieve by modifying Pick’s approach and
-applying the aforementioned result due to Bharali.</p>
-</p>
- 
- <a href="/seminars/arindam-banerjee">Homological Invariants and Combinatorics of Finite Simple Graphs</a> Arindam Banerjee (Purdue University, USA)
- <p>15 June 2017</p>
- <p><p>In this talk the interplay between the combinatorial structures
-of finite simple graphs and various homological invariants like
-regularity, depth etc. of related algebraic objects shall be discussed.
-Some open problems, recent developments and ongoing projects shall be
-discussed. In particular some new techniques developed in my thesis to
-study Castelnuovo-Mumford regularity of algebraic objects related to
-graphs shall be discussed in some details.</p>
-</p>
- 
-
-
+<div>
+<a href="/seminars-all.html "> All seminars.</a>
+</div>
   </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
