--- a/_root-site/seminars/vikram.html
+++ b/_root-site/seminars/vikram.html
@@ -10,7 +10,7 @@
 
   
 
-  <title> Department of Mathematics, IISc</title>
+  <title>  The Pick--Nevanlinna interpolation problem: complex-analytic methods in special domains - Maths@IISc </title>
   <link rel="icon" href="/IIScLogo.jpg">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -169,48 +169,15 @@ MathJax.Hub.Config({
 
 
 
-    
+<div class="row">
 
-
- <a href="/seminars/jkverma">Counting complex solutions of polynomial equations via Newton polytopes</a> Prof. Jugal Verma, IIT, Bombay
- <p>05 September 2017</p>
- <p><p>We shall discuss a theorem of Bernstein published in
-1975about the number of common solutions of n complex polynomials in n
-variables in terms of the mixed volumes of their Newton polytopes.
-This is a far reaching generalisation of the Fundamental Theorem of
-Algebra and Bezout’s Theorem about intersections of plane algebraic
-curves. If time permits, we shall sketch a proof of Bernstein’s theorem
-using Hilbert functions of monomial ideals in polynomial rings.</p>
-</p>
- 
- <a href="/seminars/apoorva">From I.Schur to T.Tao: the history of matrix positivity preservers</a> Apoorva Khare (IISc Mathematics)
- <p>18 August 2017</p>
- <p><p>I will give a gentle historical (and ongoing) account of matrix positivity
-and of operations that preserve it. This is a classical question studied
-for much of the past century, including by Schur, Polya-Szego, Schoenberg,
-Kahane, Loewner, and Rudin. It continues to be pursued actively, for both
-theoretical reasons as well as applications to high-dimensional covariance
-estimation. I will end with some recent joint work with Terence Tao
-(UCLA).</p>
-
-<p>The entire talk should be accessible given a basic understanding of linear
-algebra/matrices and one-variable calculus. That said, I will occasionally
-insert technical details for the more advanced audience. For example: this
-journey connects many seemingly distant mathematical topics, from Schur
-(products and complements), to spheres and Gram matrices, to Toeplitz and
-Hankel matrices, to rank one updates and Rayleigh quotients, to
-Cauchy-Binet and Jacobi-Trudi identities, back full circle to Schur
-(polynomials).</p>
-</p>
- 
- <a href="/seminars/malabika">For good measure ... and bad</a> Malabika Pramanik( UBC, Canada)
- <p>02 August 2017</p>
- <p>
-</p>
- 
- <a href="/seminars/vikram">The Pick--Nevanlinna interpolation problem: complex-analytic methods in special domains</a> Vikamjit Singh Chandel
- <p>17 July 2017</p>
- <p><p>The Pick–Nevanlinna interpolation problem in its fullest generality is as
+  <div class="col-md-10">
+ <h5><strong> Title: </strong> The Pick--Nevanlinna interpolation problem: complex-analytic methods in special domains </h5>
+<h5>  <strong>Speaker: </strong> Vikamjit Singh Chandel </h5>
+<h5>  <strong>Date: </strong>17 July 2017 </h5>
+<h5><strong>Time:</strong> 3:00 p.m.</h5>
+<h5><strong>Venue:</strong> LH-I </h5>
+    <p>The Pick–Nevanlinna interpolation problem in its fullest generality is as
 follows:</p>
 
 <p>Given domains D_1, D_2 in complex Euclidean spaces, and a set {(z_i,w_i):
@@ -260,21 +227,14 @@ necessary condition for the existence of an interpolant for any n and N=2.
 We shall present a necessary condition for the existence of a 3-point
 interpolant. This we shall achieve by modifying Pick’s approach and
 applying the aforementioned result due to Bharali.</p>
-</p>
- 
- <a href="/seminars/arindam-banerjee">Homological Invariants and Combinatorics of Finite Simple Graphs</a> Arindam Banerjee (Purdue University, USA)
- <p>15 June 2017</p>
- <p><p>In this talk the interplay between the combinatorial structures
-of finite simple graphs and various homological invariants like
-regularity, depth etc. of related algebraic objects shall be discussed.
-Some open problems, recent developments and ongoing projects shall be
-discussed. In particular some new techniques developed in my thesis to
-study Castelnuovo-Mumford regularity of algebraic objects related to
-graphs shall be discussed in some details.</p>
-</p>
- 
 
+  </div>
 
+</div>
+
+<div>
+<a href="/seminars-all.html "> All seminars.</a>
+</div>
   </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
