--- a/_root-site/auto_forms/PROForm.html
+++ b/_root-site/auto_forms/PROForm.html
@@ -179,7 +179,8 @@ MathJax.Hub.Config({
 <h1>Request for PRO'S Approval for Visit</h1>
 
 <font face="Arial, Helvetica, sans-serif">
-
+</center>
+<div class="form-group">
 <p>Name of the visitor(s):
 <input id="name" type="text" maxlength="28" size=26> (please enter name in capitals)</p>
 <p>Nationality:
@@ -288,8 +289,8 @@ doc.text(15,275,"PS: All the information above must necessarily be provided.")
 <!--doc.addPage();-->
 
 <!--for horizontal lines-->
-doc.line(10, 95, 190, 95); 
-doc.line(10, 103, 190, 103); 
+doc.line(10, 95, 190, 95);
+doc.line(10, 103, 190, 103);
 doc.line(10, 111, 190, 111);
 doc.line(10, 119, 190, 119)
 doc.line(10, 140, 190, 140)
@@ -316,8 +317,7 @@ doc.save("PRO_Form.html")
 }
 </script>
 <button type="button" onClick="makePDF()">Make PDF</button>
-</center>
-
+</div>
 
 
   </div>
