--- a/_root-site/seminars-all.html
+++ b/_root-site/seminars-all.html
@@ -200,6 +200,347 @@ using Hilbert functions of monomial ideals in polynomial rings.</p>
 <div class="row">
 
   <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/apoorva.html">From I.Schur to T.Tao: the history of matrix positivity preservers</a> </h5>
+ <h5>  <strong>Speaker: </strong> Apoorva Khare (IISc Mathematics) </h5>
+  <h5>  <strong>Date: </strong>18 August 2017 </h5>
+  <h5>  <strong>Time: </strong>3 PM - 5:15 PM (with a 15 minute break) </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>I will give a gentle historical (and ongoing) account of matrix positivity
+and of operations that preserve it. This is a classical question studied
+for much of the past century, including by Schur, Polya-Szego, Schoenberg,
+Kahane, Loewner, and Rudin. It continues to be pursued actively, for both
+theoretical reasons as well as applications to high-dimensional covariance
+estimation. I will end with some recent joint work with Terence Tao
+(UCLA).</p>
+
+<p>The entire talk should be accessible given a basic understanding of linear
+algebra/matrices and one-variable calculus. That said, I will occasionally
+insert technical details for the more advanced audience. For example: this
+journey connects many seemingly distant mathematical topics, from Schur
+(products and complements), to spheres and Gram matrices, to Toeplitz and
+Hankel matrices, to rank one updates and Rayleigh quotients, to
+Cauchy-Binet and Jacobi-Trudi identities, back full circle to Schur
+(polynomials).</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/malabika.html">For good measure ... and bad</a> </h5>
+ <h5>  <strong>Speaker: </strong> Malabika Pramanik( UBC, Canada) </h5>
+  <h5>  <strong>Date: </strong>02 August 2017 </h5>
+  <h5>  <strong>Time: </strong>3:30 pm </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/vikram.html">The Pick--Nevanlinna interpolation problem: complex-analytic methods in special domains</a> </h5>
+ <h5>  <strong>Speaker: </strong> Vikamjit Singh Chandel </h5>
+  <h5>  <strong>Date: </strong>17 July 2017 </h5>
+  <h5>  <strong>Time: </strong>3:00 p.m. </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>The Pick–Nevanlinna interpolation problem in its fullest generality is as
+follows:</p>
+
+<p>Given domains D_1, D_2 in complex Euclidean spaces, and a set {(z_i,w_i):
+1\leq i\leq N}\subset D_1\times D_2, where z_i are distinct and N is a
+positive integer \geq 2, find necessary and sufficient conditions for the
+existence of a holomorphic map F from D_1 into D_2 such that F(z_i) = w_i,
+1\leq N.</p>
+
+<p>When such a map F exists, we say that F is an interpolant of the data. Of
+course, this problem is intractable at the above level of generality.
+However, two special cases of the problem – which we shall study in this
+thesis – have been of lasting interest:</p>
+
+<p>INTERPOLATION FROM THE POLYDISC TO THE UNIT DISC: This is the case D_1 =
+D^n and D_2 = D, where D denotes the open unit disc in the complex plane
+and n is a positive integer. The problem itself originates with Georg
+Pick’s well-known theorem (independently discovered by Nevanlinna) for the
+case n=1. Much later, Sarason gave another proof of Pick’s result using an
+operator-theoretic approach, which is very influential. Using this
+approach for n\geq 2, Agler–McCarthy provided a solution to the problem
+with the restriction that the interpolant is in the Schur–Agler class.
+This is notable because when n = 2 the latter result completely solves the
+problem for the case D_1 = D^2, D_2 = D. However, Pick’s approach can also
+be effective for n\geq 2. In this thesis, we give an alternative
+characterization for the existence of a 3-point interpolant based on
+Pick’s approach and involving the study of rational inner functions.</p>
+
+<p>Cole, Lewis and Wermer lifted Sarason’s approach to uniform algebras –
+leading to a characterization for the existence of an interpolant in terms
+of the positivity of a large, rather abstractly-defined family of (N\times
+N) matrices. McCullough later refined their result by identifying a
+smaller family of matrices. The second result of this thesis is in the
+same vein, namely: it provides a characterization of those data that admit
+a D^n-to-D interpolant in terms of the positivity of a family of matrices
+parametrized by a class of polynomials.</p>
+
+<p>INTERPOLATION FORM THE UNIT DISC TO THE SPECTRAL UNIT BALL: This is the
+case D_1 = D and D_2 is the set of all (n\times n) matrices with spectral
+radius less than 1. The interest in this arises from problems in Control
+Theory. Bercovici, Fois and Tannenbaum adapted Sarason’s methods to give a
+(somewhat hard-to-check) characterization for the existence of an
+interpolant under a very mild restriction. Later, Agler–Young established
+a relation between the interpolation problem in the spectral unit ball and
+that in the symmetrized polydisc – leading to a necessary condition for
+the existence of an interpolant. Bharali later provided a new inequivalent
+necessary condition for the existence of an interpolant for any n and N=2.
+We shall present a necessary condition for the existence of a 3-point
+interpolant. This we shall achieve by modifying Pick’s approach and
+applying the aforementioned result due to Bharali.</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/arindam-banerjee.html">Homological Invariants and Combinatorics of Finite Simple Graphs</a> </h5>
+ <h5>  <strong>Speaker: </strong> Arindam Banerjee (Purdue University, USA) </h5>
+  <h5>  <strong>Date: </strong>15 June 2017 </h5>
+  <h5>  <strong>Time: </strong> </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>In this talk the interplay between the combinatorial structures
+of finite simple graphs and various homological invariants like
+regularity, depth etc. of related algebraic objects shall be discussed.
+Some open problems, recent developments and ongoing projects shall be
+discussed. In particular some new techniques developed in my thesis to
+study Castelnuovo-Mumford regularity of algebraic objects related to
+graphs shall be discussed in some details.</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/aprameyan.html">Boundary values, resonances and scattering poles on symmetric spaces of rank one</a> </h5>
+ <h5>  <strong>Speaker: </strong> Aprameyan Parthasarathy (University of Paderborn, Germany) </h5>
+  <h5>  <strong>Date: </strong>14 June 2017 </h5>
+  <h5>  <strong>Time: </strong>4pm </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/sanchayan-sen.html">Random structures: Phase transitions, scaling limits, and universality</a> </h5>
+ <h5>  <strong>Speaker: </strong> Sanachayan Sen (McGill University, Canada) </h5>
+  <h5>  <strong>Date: </strong>08 June 2017 </h5>
+  <h5>  <strong>Time: </strong>3 p.m. </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>The aim of this talk is to give an overview of some recent
+results in two
+interconnected areas:</p>
+
+<p><strong>a) Random discrete structures:</strong> One major conjecture in probabilistic
+combinatorics, formulated by statistical physicists using non-rigorous
+arguments and enormous simulations in the early 2000s, is as follows: for a
+wide array of random graph models on [image: n] vertices and degree
+exponent [image: \tau&gt;3], typical distance both within maximal components
+in the critical regime as well as on the minimal spanning tree on the giant
+component in the supercritical regime scale like [image:
+n^{\frac{\tau\wedge 4 -3}{\tau\wedge 4 -1}}]. In other words, the degree
+exponent determines the universality class the random graph belongs to. The
+mathematical machinery available at the time was insufficient for providing
+a rigorous justification of this conjecture.</p>
+
+<p>More generally, recent research has provided strong evidence to believe
+that several objects, including
+(i) components under critical percolation,
+(ii) the vacant set left by a random walk, and
+(iii) the minimal spanning tree,
+constructed on a wide class of random discrete structures converge, when
+viewed
+as metric measure spaces, to some random fractals in the Gromov-Hausdorff
+sense, and these limiting objects are universal under some general
+assumptions. We will discuss recent developments in a larger program aimed
+at a complete resolution of these conjectures.</p>
+
+<p><strong>b) Stochastic geometry:</strong>  In contrast, less precise results are known in the
+case of spatial systems. We discuss a recent result concerning the length
+of spatial minimal spanning trees that answers a question raised by Kesten
+and Lee in the 90’s, the proof of which relies on a variation of Stein’s
+method and a quantification of a classical argument in percolation theory.</p>
+
+<p>Based on joint work with Louigi Addario-Berry, Shankar Bhamidi, Nicolas
+Broutin, Sourav Chatterjee, Remco van der Hofstad, and Xuan Wang.</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/rishi-vyas2.html">A noncommutative Matlis-Greenlees-May equivalence</a> </h5>
+ <h5>  <strong>Speaker: </strong> Rishi Vyas (Ben Gurion University, Israel) </h5>
+  <h5>  <strong>Date: </strong>06 June 2017 </h5>
+  <h5>  <strong>Time: </strong>3 p.m. </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>The notion of a weakly proregular sequence in a commutative ring was first
+formally introduced by Alonso-Jeremias-Lipman (though the property that it
+formalizes was already known to Grothendieck), and further studied by
+Schenzel and Porta-Shaul-Yekutieli: a precise definition of this notion
+will be given during the talk. An ideal in a commutative ring is called
+weakly proregular if it has a weakly proregular generating set.  Every
+ideal in a commutative noetherian ring is weakly proregular.
+It turns out that weak proregularity is the appropriate context for the
+Matlis-Greenlees-May (MGM) equivalence: given a weakly proregular ideal I
+in a commutative ring A, there is an equivalence of triangulated
+categories (given in one direction by derived local cohomology and in the
+other by derived completion at I) between cohomologically I-torsion (i.e.
+complexes with I-torsion cohomology) and cohomologically I-complete
+complexes in the derived category of A.</p>
+
+<p>In this talk, we will give a categorical characterization of weak
+proregularity: this characterization then serves as the foundation for a
+noncommutative generalisation of this notion. As a consequence, we will
+arrive at a noncommutative variant of the MGM equivalence. This work is
+joint with Amnon Yekutieli.</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/rishi-vyas.html">Dualizing Complexes in the Noncommutative Arithmetic Contex</a> </h5>
+ <h5>  <strong>Speaker: </strong> Rishi Vyas (Ben Gurion University, Israel) </h5>
+  <h5>  <strong>Date: </strong>06 June 2017 </h5>
+  <h5>  <strong>Time: </strong>3pm </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>Dualizing complexes were first introduced in commutative
+algebra and algebraic geometry by Grothendieck and play a fundamental role
+in Serre-Grothendieck duality theory for schemes. The notion of a
+dualizing complex was extended to noncommutative ring theory by Yekutieli.
+There are existence theorems for dualizing complexes in the noncommutative
+context, due to Van den Bergh, Wu, Zhang, and Yekutieli amongst others.</p>
+
+<p>Most considerations of dualizing complexes over noncommutative rings are
+for algebras defined over fields. There are technical difficulties
+involved in extending this theory to algebras defined over more general
+commutative base rings. In this talk, we will describe these challenges
+and how to get around them. Time permitting, we will end by presenting an
+existence theorem for dualizing complexes in this more general setting.</p>
+
+<p>The material described in this talk is work in progress, carried out
+jointly with Amnon Yekutieli.</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/atreyee-ghosh.html">Explaining the Earth’s surface observations: a Computational Geodynamics Approach</a> </h5>
+ <h5>  <strong>Speaker: </strong> Attreyee Ghosh (Center for Earth Sciences, IISc) </h5>
+  <h5>  <strong>Date: </strong>18 May 2017 </h5>
+  <h5>  <strong>Time: </strong>3 p.m. </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>Abstract: The field of geodynamics deals with the large scale forces
+shaping the Earth. Computational geodynamics, which uses numerical
+modeling, is one of the most important tools to understand the mechanisms
+within the deep Earth. With the help of these numerical models we can
+address some of the outstanding questions regarding the processes
+operating within the Earth’s interior and their control on shaping the
+surface of the planet. Much of Earth’s surface observations such as
+gravity anomalies, plate motions, dynamic topography, lithosphere stress
+field, owe their origin to convection within the Earth’s mantle. While we
+understand the basic nature of such flow in the mantle, a lot remains
+unexplained, including the complex rheology of the deep mantle and how
+this density driven convective flow couples with the shallow surface. In
+this talk I will discuss how my group is using numerical modeling to
+understand the influence of the deep mantle on surface observations.</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
+  <h5><strong> Title: </strong> <a href="/seminars/eshita-mazumdar.html">Davenport constant and an external problem related to it</a> </h5>
+ <h5>  <strong>Speaker: </strong> Eshita Mazumdar (IIT, Mumbai) </h5>
+  <h5>  <strong>Date: </strong>09 May 2017 </h5>
+  <h5>  <strong>Time: </strong>3 p.m. </h5>
+  <h5>  <strong>Venue: </strong> </h5>
+
+
+    <p>For a finite abelian group G with |G| = n, the Davenport
+Constant DA(G) is defined to be the least integer k such that any sequence
+S with length k of elements in G has a non-empty A weighted zero-sum
+subsequence. For certain sets A, we already know the precise value of
+constant corresponding to the cyclic group Zn. But for different group G
+and A, the precise value of it is still an open question. We try to find
+out bounds for these combinatorial invariant for random set A. We got few
+results in this connection. In this talk I would like to present those
+results and discuss about an extremal problem related to this
+combinatorial invariant.</p>
+
+  </div>
+
+</div>
+
+  <p>&nbsp;</p>
+ 
+<div class="row">
+
+  <div class="col-md-10">
   <h5><strong> Title: </strong> <a href="/seminars/roncal.html">Weighted norm inequalities for rough singular integral operators</a> </h5>
  <h5>  <strong>Speaker: </strong> Luz Roncal (BCAM -  Basque Center for Applied Mathematics) </h5>
   <h5>  <strong>Date: </strong>24 April 2017 </h5>
