--- a/seminars-all.html
+++ b/seminars-all.html
@@ -13,7 +13,13 @@ title: Seminars
  <h5>  <strong>Speaker: </strong> {{sem.speaker}} </h5>
   <h5>  <strong>Date: </strong>{{ sem.date | date_to_long_string }} </h5>
   <h5>  <strong>Time: </strong>{{ sem.time }} </h5>
-  <h5>  <strong>Venue: </strong>{{ sem.location }} </h5>
+  <h5>  <strong>Venue: </strong>
+    {% if sem.venue %}
+    {{ sem.venue }}
+    {% else %}
+    {{ sem.location }}
+    {% endif %} 
+  </h5>
 
 
     {{ sem.content }}
